--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ locale: en_US
 # bio & social
 name: Ben Dowdell
 email: ben.dowdell87@gmail.com
-twitter: bendowdell87
-linkedin: ben-dowdell
-github: bdowdell
+twitter_username: bendowdell87
+linkedin_username: ben-dowdell
+github_username: bdowdell
 
 
 
