--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bendowdell.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bendowdell87
 github_username:  bdowdell
-linked_username: ben-dowdell
+linkedin_username: ben-dowdell
 
 # Build settings
 theme: minima
