--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@
 title: Ben Dowdell
 email: ben.dowdell87@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
+  the personal website of ben dowdell.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://bendowdell.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bendowdell87
