--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Ben Dowdell
+title: ben dowdell
 email: ben.dowdell87@gmail.com
+author: Ben Dowdell
 description: >- # this means to ignore newlines until "baseurl:"
   the personal website of ben dowdell.
 baseurl: "/" # the subpath of your site, e.g. /blog
