--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author: Ben Dowdell
 description: >- # this means to ignore newlines until "baseurl:"
   the personal website of ben dowdell.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://bendowdell.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.bendowdell.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bendowdell87
 github_username:  bdowdell
 linkedin_username: ben-dowdell
