--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ben dowdell
+title: bendowdell.com
 email: ben.dowdell87@gmail.com
 author: Ben Dowdell
 description: >- # this means to ignore newlines until "baseurl:"
